--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=postgres;Port=5432;Database=postgres;Username=postgres;Password=9Nx7LemhCfnR9saeHRmh"
+    "DefaultConnection": "Host=138.201.89.161;Port=5433;Database=postgres;Username=postgres;Password=9Nx7LemhCfnR9saeHRmh;"
   },
   "Logging": {
     "LogLevel": {
